<resources>
    <string name="app_name">CryptoPrice</string>
    <string name="slash">/</string>
    <string name="price">Текущая цена:</string>
    <string name="min_price">Минимум за день:</string>
    <string name="max_price">Максимум за день:</string>
    <string name="last_market">Последняя сделка:</string>
    <string name="last_update">Обновлено:</string>
    <string name="change_pct_24_hour_template">%.2f%%</string>
    <string name="cost_template">$ %s</string>
    <string name="price_list_title">Цена</string>
    <string name="coin">Монета</string>
    <string name="change_pct_24">24ч.</string>
    <string name="mktcap">Капитализация</string>
    <string name="loading">Загрузка...</string>
    <string name="minute">MIN</string>
    <string name="hourly">HOUR</string>
    <string name="daily">DAY</string>
    <string name="page_info">Info</string>
    <string name="page_terminal">Terminal</string>
    <string name="page_news">News</string>
    <string name="open_price">Цена открытия:</string>
    <string name="volume_day">Объём за день:</string>
    <string name="change_day">Изменение за день:</string>
    <string name="no_data">Нет данных</string>
    <string name="retry">Повторить попытку</string>
    <string name="network_error_message">Network problems. Check the network connection.</string>
    <string name="database_error_message">There was a problem working with the database.</string>
    <string name="unknown_error_message">An unknown error occurred during the request.</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
</resources>