<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.coinlist.CoinListFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_update"
                tools:text="@string/last_update" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.LabelMedium"
                android:id="@+id/tv_time_last_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                tools:text="12:54:12" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            tools:text="@string/app_name" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_per_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_per_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_per_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_price_label"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_list_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_per_50"
            app:layout_constraintStart_toStartOf="@id/gl_per_20"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Цена" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_symbols_label"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_per_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Монета" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_change_pct_24_label"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pct_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_per_70"
            app:layout_constraintStart_toStartOf="@id/gl_per_50"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="24ч." />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_mkt_cap_label"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mktcap_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/gl_per_70"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Капитализация" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_coin_price_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_headers"
        tools:listitem="@layout/item_coin_info" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_headers"
        tools:visibility="visible" />

    <com.grebnev.cryptoprice.presentation.base.error.ErrorScreenView
        android:id="@+id/error_screen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_headers"
        app:retryButtonText="@string/retry"
        app:showRetryButton="false"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>